fix: more outlines visible for a11y

--- a/frontend/amundsen_application/static/css/_buttons-default.scss
+++ b/frontend/amundsen_application/static/css/_buttons-default.scss
@@ -59,7 +59,6 @@ $outline-width: 2px;
     &:focus {
       background-color: $btn-primary-bg-hover;
       border-color: $btn-primary-border-hover;
-      outline: none;
     }
   }
 
@@ -83,7 +82,6 @@ $outline-width: 2px;
     &:focus {
       background-color: $btn-default-bg-hover;
       border-color: $btn-default-border-hover;
-      outline: none;
     }
   }
 
